--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -9,7 +9,7 @@
     <string name="PvE">Joueur contre ordinateur</string>
 
     <string name="action_about">Info</string>
-    <string name="about_text"></string>
+    <string name="about_text">Tictactoe est un jeu à deux joueurs dans lequel ils vont jouer leurs marqueurs, soit x ou o, sur la grille. Vous gagnez le jeu en obtenant trois de vos marqueurs dans une rangée. Les marqueurs peuvent être horizontale, verticale ou diagonale.</string>
 
     <string name="score_player1">Joueur 1: %1$d</string>
     <string name="score_player2">Joueur 2: %1$d</string>
@@ -23,4 +23,6 @@
     <string name="message_tie">C\'est un match nul!</string>
 
     <string name="button_OK">OK</string>
+
+    <string name="author">Écrit par Jeegna Patel</string>
 </resources>
