Fix button resize on screen rotate

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="app_name">TTTjeegna</string>
     <string name="button_restart">Recommencer</string>
-    <string name="button_versus">Changer le mode de jeu</string>
+    <string name="button_versus">Changer le mode</string>
     <string name="button_reset_scores">Réinitialiser les scores</string>
 
     <string name="PvP">Joueur contre joueur</string>
