--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">TTTjeegna</string>
     <string name="button_restart">Restart</string>
     <string name="button_versus">Change Mode</string>
-    <string name="button_reset_scores">Reset Score</string>
+    <string name="button_reset_scores">Reset Scores</string>
 
     <string name="PvP">Player vs. Player</string>
     <string name="PvE">Player vs. Droid</string>
